syntax = "proto3";

package models;

option go_package = "schedule-optimizer/internal/proto/generated";

message GPAData {
  map<string, double> subjects = 1;
  map<string, double> professors = 2;
  map<string, double> course_gpas = 3;
}
